Fix overflow issues

--- a/codeFormatter/codeFormatter.css
+++ b/codeFormatter/codeFormatter.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Roboto', sans-serif;
-    padding: 30px;
+    padding: 20px;
     margin: 0px;
 }
 
@@ -28,7 +28,7 @@ pre {
   width: auto;
   font-size: 10px;
   padding-left: 11px;
-  padding-top: 9px;
+  padding-top: 10px;
   padding-bottom: 4px;
   line-height: 12px;
   display: inline-block;
